@@ -13,10 +13,12 @@ import com.webobjects.eoaccess.EOAdaptorChannel;
 import com.webobjects.eoaccess.EOAttribute;
 import com.webobjects.eoaccess.EODatabase;
 import com.webobjects.eoaccess.EODatabaseContext;
+import com.webobjects.eoaccess.EODatabaseDataSource;
 import com.webobjects.eoaccess.EOEntity;
 import com.webobjects.eoaccess.EOModel;
 import com.webobjects.eoaccess.EOModelGroup;
 import com.webobjects.eoaccess.EOObjectNotAvailableException;
+import com.webobjects.eoaccess.EORelationship;
 import com.webobjects.eoaccess.EOSQLExpression;
 import com.webobjects.eoaccess.EOSQLExpressionFactory;
 import com.webobjects.eoaccess.EOUtilities;
@@ -58,10 +60,10 @@ import com.webobjects.foundation.NSSet;
 import com.webobjects.foundation.NSTimestamp;
 import com.webobjects.foundation.NSTimestampFormatter;
 
+import er.extensions.eof.ERXEOAccessUtilities.DatabaseContextOperation;
 import er.extensions.foundation.ERXArrayUtilities;
 import er.extensions.foundation.ERXDictionaryUtilities;
 import er.extensions.foundation.ERXKeyValueCodingUtilities;
-import er.extensions.foundation.ERXProperties;
 import er.extensions.jdbc.ERXSQLHelper;
 import er.extensions.validation.ERXValidationException;
 import er.extensions.validation.ERXValidationFactory;
@@ -193,12 +195,6 @@ public class ERXEOControlUtilities {
      	if(ec == null) throw new IllegalArgumentException("EO must live in an EC");
      	
         boolean isNewObject = ERXEOControlUtilities.isNewObject(eo);
-        
-        // Check for old EOF bug and do nothing as we can't localInstance
-        // anything here
-        if (ERXProperties.webObjectsVersionAsDouble() < 5.21d && isNewObject) {
-            return eo;
-        }
 
         T localObject = eo;
         
@@ -302,9 +298,10 @@ public class ERXEOControlUtilities {
     /**
      * Creates an enterprise object for the given entity
      * name by first looking up the class description
-     * of the entity to create the enterprise object.
-     * The object is then inserted into the editing context
-     * and returned.
+     * of the entity to create the enterprise object and
+     * then adding values from the dictionary. The object is
+     * then inserted into the editing context and returned.
+     *
      * @param editingContext editingContext to insert the created object into
      * @param entityName name of the entity to be created.
      * @param objectInfo dictionary of values pushed onto the object
@@ -461,15 +458,14 @@ public class ERXEOControlUtilities {
      * @param ec editing context, only used to determine the entity
      * @param entityName name of the entity, only used to determine the entity
      * @param eoqualifier to construct the fetch spec with
-     * @param sortOrderings array of sort orderings to sort the result set
-     *		with.
+     * @param sortOrderings array of sort orderings to sort the result set with.
      * @param additionalKeys array of additional key paths to construct the
      *		raw rows key paths to fetch.
      * @return fetch specification that can be used to fetch primary keys for
      * 		a given qualifier and sort orderings.
      */
     @SuppressWarnings("unchecked")
-	public static EOFetchSpecification primaryKeyFetchSpecificationForEntity(EOEditingContext ec,
+    public static EOFetchSpecification primaryKeyFetchSpecificationForEntity(EOEditingContext ec,
                                                                       String entityName,
                                                                       EOQualifier eoqualifier,
                                                                       NSArray<EOSortOrdering> sortOrderings,
@@ -486,7 +482,7 @@ public class ERXEOControlUtilities {
     }
     
     /**
-    * Fetches an array of primary keys matching a given qualifier
+     * Fetches an array of primary keys matching a given qualifier
      * and sorted with a given array of sort orderings.
      * @param ec editing context to fetch into
      * @param entityName name of the entity
@@ -550,17 +546,17 @@ public class ERXEOControlUtilities {
      * Fetches an enterprise object based on a given primary key value.
      * This method has an advantage over the standard EOUtilities method
      * in that you can specify prefetching key paths as well as refreshing
-     * the snapshot of the given object
+     * the snapshot of the given object.
      * @param ec editing context to fetch into
      * @param entityName name of the entity
      * @param primaryKeyValue primary key value. Compound primary keys are given as NSDictionaries.
-     * @param prefetchingKeyPaths key paths to fetch off of the eo
+     * @param prefetchingKeyPaths key paths to prefetch for the eo
      * @param refreshRefetchedObjects if true, the object will be refetched and refreshed
      * @param throwIfMissing if true, an exception is thrown for a missing object
      * @return enterprise object matching the given value or null if none is foudn
      * @throws IllegalStateException if the entity has a compound key and only one key is provided or 
      * if more than one object is found matching the value.
-     * @throws EOObjectNotAvailableException if throwIfMissing is true and 
+     * @throws EOObjectNotAvailableException if throwIfMissing is true and the object is missing
      */    
     @SuppressWarnings("unchecked")
     public static EOEnterpriseObject objectWithPrimaryKeyValue(EOEditingContext ec,
@@ -575,8 +571,7 @@ public class ERXEOControlUtilities {
             if (entity.primaryKeyAttributes().count() != 1) {
                 throw new IllegalStateException("The entity '" + entity.name() + "' has a compound primary key and cannot be used with a single primary key value.");
             }
-            values = new NSDictionary<String, Object>(primaryKeyValue,
-                               ((EOAttribute)entity.primaryKeyAttributes().lastObject()).name());
+            values = new NSDictionary<String, Object>(primaryKeyValue, entity.primaryKeyAttributeNames().lastObject());
         }
         NSArray eos;
         if (prefetchingKeyPaths == null && !refreshRefetchedObjects) {
@@ -688,24 +683,29 @@ public class ERXEOControlUtilities {
 		}
 		return result;
 	}
+    
     /**
      * Returns an {@link com.webobjects.foundation.NSArray NSArray} containing the primary keys from the resulting rows starting
-     * at start and stopping at end using a custom SQL, derived from the SQL
+     * at <i>start</i> and stopping at <i>end</i> using a custom SQL, derived from the SQL
      * which the {@link com.webobjects.eocontrol.EOFetchSpecification EOFetchSpecification} would use normally {@link com.webobjects.eocontrol.EOFetchSpecification#setHints(NSDictionary) setHints()}
      *
-     * @param ec editingcontext to fetch objects into
+     * @param ec editing context to fetch objects into
      * @param spec fetch specification for the fetch
-     * @param start
-     * @param end
+     * @param start the starting row number
+     * @param end the last row number
      *
      * @return primary keys in the given range
      */
-    public static NSArray primaryKeyValuesInRange(EOEditingContext ec, EOFetchSpecification spec, int start, int end) {
+    public static NSArray<NSDictionary<String, Object>> primaryKeyValuesInRange(EOEditingContext ec, EOFetchSpecification spec, int start, int end) {
         EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, spec.entityName());
-        NSArray pkNames = (NSArray) entity.primaryKeyAttributes().valueForKey("name");
-        spec.setFetchesRawRows(true);
-        spec.setRawRowKeyPaths(pkNames);
-    	EOFetchSpecification clonedFetchSpec = (EOFetchSpecification)spec.clone();
+        NSArray<String> pkNames = entity.primaryKeyAttributeNames();
+        EOFetchSpecification clonedFetchSpec = (EOFetchSpecification)spec.clone();
+        clonedFetchSpec.setFetchesRawRows(true);
+        clonedFetchSpec.setRawRowKeyPaths(pkNames);
+        if (clonedFetchSpec instanceof ERXFetchSpecification) {
+            // remove any range setting as we will explicitly set start and end limit
+            ((ERXFetchSpecification)clonedFetchSpec).setFetchRange(null);
+        }
         EOSQLExpression sql = ERXEOAccessUtilities.sqlExpressionForFetchSpecification(ec, clonedFetchSpec, start, end);
         NSDictionary<String, EOSQLExpression> hints = new NSDictionary<String, EOSQLExpression>(sql, EODatabaseContext.CustomQueryExpressionHintKey);
         clonedFetchSpec.setHints(hints);
@@ -730,10 +730,9 @@ public class ERXEOControlUtilities {
 
     /**
      * Returns the number of unique objects matching the given
-     * qualifier for a given entity name. Implementation
-     * wise this method will generate the correct sql to only
-     * perform a count, i.e. all of the objects wouldn't be
-     * pulled into memory.
+     * qualifier for a given entity name. This method will generate
+     * the correct sql to perform a count and not to fetch the objects.
+     *
      * @param ec editing context to use for the count qualification
      * @param entityName name of the entity to fetch
      * @param qualifier to find the matching objects
@@ -746,6 +745,102 @@ public class ERXEOControlUtilities {
         EOAttribute aggregateAttribute = EOEnterpriseObjectClazz.objectCountUniqueAttribute(attribute);
         return (Integer)_aggregateFunctionWithQualifierAndAggregateAttribute(ec, entityName, qualifier, aggregateAttribute);
     }
+
+	/**
+	 * Counts the objects in a toMany relationship in an effective way.
+	 *
+	 * If the relationship fault has already been fired,
+	 * it just returns the array count. If relationship is a fault, it looks for a relationship snapshot array, and if that
+	 * is present, returns the count of the snapshot array. Finally if it is a fault and no snapshot array
+	 * exists, performs a count in the database.
+	 *
+	 * @param object
+	 *            the EOEnterpriseObject whose relationship is being counted.
+	 * @param relationshipName
+	 *            the name of the relationship being counted.
+	 * @return count of related objects in the relationship named {@code relationshipName}
+	 * @throws NullPointerException if either {@code object} or {@code relationshipName} are null
+	 * @throws IllegalArgumentException if {@code relationshipName} is not a toMany relationship key 
+	 */
+	public static Integer objectCountForToManyRelationship(EOEnterpriseObject object, final String relationshipName) {
+
+		try {
+			// --- (1) Simple case of a new unsaved object ---
+			// Does not exist in the db, does not have a snapshot in EOdb.
+			if (isNewObject(object)) {
+				NSArray<EOEnterpriseObject> relatedObjects = (NSArray<EOEnterpriseObject>) object.storedValueForKey(relationshipName);
+				// --- (1) return result
+				return Integer.valueOf(relatedObjects.count());
+			}
+
+			// Get relationship object which may, or may not, be a fault
+			Object relationshipValue = object.storedValueForKey(relationshipName);
+
+			// --- (2) Case where the relationship fault has already been fired
+			if (!EOFaultHandler.isFault(relationshipValue)) {
+				NSArray relatedItems = (NSArray) relationshipValue;
+				// --- (2) return result
+				return Integer.valueOf(relatedItems.count());
+			}
+		}
+		catch (NullPointerException e) {
+			if (object == null) {
+				NullPointerException e1 = new NullPointerException("object argument cannot be null");
+				e1.initCause(e);
+				throw e1;
+			} else if (relationshipName == null) {
+				NullPointerException e1 = new NullPointerException("relationshipName argument cannot be null");
+				e1.initCause(e);
+				throw e1;
+			}
+			// Otherwise NPE here means the attribute returned null value, indicating it
+			// is not a toMany since a toMany always returns an NSArray object
+			throw new IllegalArgumentException("The attribute named '" + relationshipName + "' in the entity named '" + object.entityName() + "' is not a toMany relationship! Expected an NSArray, but got null.");
+		}
+		catch (ClassCastException e) {
+			// CCE here means the attribute returned some non-null value other than an
+			// NSArray instance value, indicating it is not a toMany
+			throw new IllegalArgumentException("The attribute named '" + relationshipName + "' in the entity named '" + object.entityName() 
+					+ "' is not a toMany relationship! Expected an NSArray, but got a " 
+					+ object.storedValueForKey(relationshipName).getClass().getName(), e);
+		}
+		
+		final EOEditingContext ec = object.editingContext();
+		EOEntity entity = ERXEOAccessUtilities.entityForEo(object);
+		EORelationship relationship = entity.relationshipNamed(relationshipName);
+
+		// Fail in the event that the relationship fault is not a toMany
+		if (!relationship.isToMany()) {
+			// Happens if toOne key used and the to-one is a fault
+			throw new IllegalArgumentException("The attribute named '" + relationshipName
+					+ "' in the entity named '" + object.entityName() +"' is not a toMany relationship!");
+		}
+
+		// --- (3) Case of a fault and a snapshot exists to provide a count
+		final EOGlobalID gid = ec.globalIDForObject(object);
+		String modelName = entity.model().name();
+		final EODatabaseContext dbc = EOUtilities.databaseContextForModelNamed(ec, modelName);
+
+		NSArray toManySnapshot = ERXEOAccessUtilities.executeDatabaseContextOperation(dbc, 2,
+				new DatabaseContextOperation<NSArray>() {
+					public NSArray execute(EODatabaseContext databaseContext) throws Exception {
+						// Search for and return the snapshot
+						return dbc.snapshotForSourceGlobalID(gid, relationshipName, ec.fetchTimestamp());
+					}
+				});
+
+		// Null means that a relationship snapshot array was not found in EODBCtx or EODB.
+		if (toManySnapshot != null) {
+			// --- (3) return result
+			return Integer.valueOf(toManySnapshot.count());
+		}
+
+		// Default case
+		// --- (4) Case where relationship has not been faulted, and no snapshot array exists
+		EOQualifier q = EODatabaseDataSource._qualifierForRelationshipKey(relationshipName, object);
+		// --- (4) return result
+		return objectCountWithQualifier(ec, relationship.destinationEntity().name(), q);
+	}
 
     /**
      * Returns the number of objects in the database with the qualifier and counting attribute.  This implementation
@@ -986,8 +1081,8 @@ public class ERXEOControlUtilities {
     /**
      * Fetches a shared enterprise object for a given fetch
      * specification from the default shared editing context.
-     * @param fetchSpec name of the fetch specification on the
-     *		shared object.
+     *
+     * @param fetchSpec specification on the shared object
      * @param entityName name of the shared entity
      * @return the shared enterprise object fetch by the fetch spec named.
      */
@@ -995,6 +1090,14 @@ public class ERXEOControlUtilities {
         return EOUtilities.objectWithFetchSpecificationAndBindings(EOSharedEditingContext.defaultSharedEditingContext(), entityName, fetchSpec, null);
     }
 
+    /**
+     * Fetches a shared enterprise object from the default shared editing context
+     * given the name of a fetch specification.
+     *
+     * @param fetchSpecName name of the fetch specification on the shared object.
+     * @param entityName name of the shared entity
+     * @return the shared enterprise object fetch by the fetch spec named.
+     */
     public static NSArray sharedObjectsWithFetchSpecificationNamed(String entityName, String fetchSpecName) {
         NSArray result = null;
 
@@ -1026,7 +1129,7 @@ public class ERXEOControlUtilities {
      * Gets the shared enterprise object with the given primary
      * from the default shared editing context. This has the
      * advantage of not requiring a roundtrip to the database to
-     * lookup the object. But, it will fetch if the object is not
+     * lookup the object. But it will fetch if the object is not
      * found in the default shared editing context.
      * @param entityName name of the entity
      * @param primaryKey primary key of object to be found
@@ -1043,8 +1146,8 @@ public class ERXEOControlUtilities {
     
     /**
      * Gets a fetch specification from a given entity. If qualifier binding variables
-     * are passed in then the fetchspecification is cloned and the binding variables
-     * are substituted returning a fetch specification that can be used.
+     * are passed in then the fetch specification is cloned and the binding variables
+     * are substituted, returning a fetch specification that can be used.
      * @param entityName name of the entity that the fetch specification is bound to
      * @param fetchSpecificationName name of the fetch specification
      * @param bindings dictionary of qualifier bindings
@@ -1067,9 +1170,8 @@ public class ERXEOControlUtilities {
      * @return new primary key dictionary or null if one of the properties is
      * null or one of the primary key attributes is not a class property.
      */
-
     @SuppressWarnings("unchecked")
-	public static NSDictionary<String, Object> newPrimaryKeyDictionaryForObjectFromClassProperties(EOEnterpriseObject eo) {
+    public static NSDictionary<String, Object> newPrimaryKeyDictionaryForObjectFromClassProperties(EOEnterpriseObject eo) {
         EOEditingContext ec = eo.editingContext();
         EOEntity entity = EOUtilities.entityNamed(ec, eo.entityName());
         NSArray<String> pkAttributes = entity.primaryKeyAttributeNames();
@@ -1091,11 +1193,10 @@ public class ERXEOControlUtilities {
 
     /**
      * Utility method to generate a new primary key for an object. Calls
-     * {@link #newPrimaryKeyForObjectFromClassProperties(EOEnterpriseObject)} and if that returns null,
+     * {@link #newPrimaryKeyDictionaryForObjectFromClassProperties(EOEnterpriseObject)} and if that returns null,
      * {@link #newPrimaryKeyDictionaryForEntityNamed(EOEditingContext, String)}
      * @return new primary key dictionary or null if a failure occured.
      */
-
     public static NSDictionary<String, Object> newPrimaryKeyDictionaryForObject(EOEnterpriseObject eo) {
         NSDictionary<String, Object> dict = newPrimaryKeyDictionaryForObjectFromClassProperties(eo);
         if(dict == null) {
@@ -1121,7 +1222,7 @@ public class ERXEOControlUtilities {
      *		entity.
      */
     @SuppressWarnings("unchecked")
-	public static NSDictionary<String, Object> newPrimaryKeyDictionaryForEntityNamed(EOEditingContext ec, String entityName) {
+    public static NSDictionary<String, Object> newPrimaryKeyDictionaryForEntityNamed(EOEditingContext ec, String entityName) {
         EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, entityName);
         EODatabaseContext dbContext = EODatabaseContext.registeredDatabaseContextForModel(entity.model(), ec);
         NSDictionary<String, Object> primaryKey = null;
@@ -1215,24 +1316,24 @@ public class ERXEOControlUtilities {
      *		object.
      */
     @SuppressWarnings("unchecked")
-	public static NSDictionary<String, Object> primaryKeyDictionaryForString(EOEditingContext ec, String entityName, String string) {
+    public static NSDictionary<String, Object> primaryKeyDictionaryForString(EOEditingContext ec, String entityName, String string) {
         if(string == null) {
             return null;
         }
         
         if(string.trim().length()==0) {
-            return (NSDictionary<String, Object>)NSDictionary.EmptyDictionary;
+            return NSDictionary.EmptyDictionary;
         }
         
         EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, entityName);
-        NSArray pks = entity.primaryKeyAttributes();
+        NSArray<EOAttribute> pks = entity.primaryKeyAttributes();
         NSMutableDictionary<String, Object> pk = new NSMutableDictionary<String, Object>();
         try {
             Object rawValue = NSPropertyListSerialization.propertyListFromString(string);
             if(rawValue instanceof NSArray) {
                 int index = 0;
                 for(Enumeration e = ((NSArray)rawValue).objectEnumerator(); e.hasMoreElements();) {
-                    EOAttribute attribute = (EOAttribute)pks.objectAtIndex(index++);
+                    EOAttribute attribute = pks.objectAtIndex(index++);
                     Object value = e.nextElement();
                     if(attribute.adaptorValueType() == EOAttribute.AdaptorDateType && !(value instanceof NSTimestamp)) {
                         value = new NSTimestampFormatter("%Y-%m-%d %H:%M:%S %Z").parseObject((String)value);
@@ -1251,7 +1352,7 @@ public class ERXEOControlUtilities {
                 	
             		rawValue = new NSData((NSMutableData)rawValue);
             	}
-                EOAttribute attribute = (EOAttribute)pks.objectAtIndex(0);
+                EOAttribute attribute = pks.objectAtIndex(0);
                 Object value = rawValue;
                 value = attribute.validateValue(value);
                 pk.setObjectForKey(value, attribute.name());
@@ -1267,9 +1368,8 @@ public class ERXEOControlUtilities {
      * Returns the decoded global id for an propertylist encoded string representation
      * of the primary key for a given object.
      */
-
     @SuppressWarnings("unchecked")
-	public static EOGlobalID globalIDForString(EOEditingContext ec, String entityName, String string) {
+    public static EOGlobalID globalIDForString(EOEditingContext ec, String entityName, String string) {
     	NSDictionary<String, Object> values = primaryKeyDictionaryForString(ec, entityName, string);
     	EOEntity entity = ERXEOAccessUtilities.entityNamed(ec, entityName);
         NSArray<String> pks = entity.primaryKeyAttributeNames();
@@ -1289,7 +1389,7 @@ public class ERXEOControlUtilities {
     }
 
     /**
-        * Gives the primary key array for a given enterprise
+     * Gives the primary key array for a given enterprise
      * object. This has the advantage of not firing the
      * fault of the object, unlike the method in
      * {@link com.webobjects.eoaccess.EOUtilities EOUtilities}.
@@ -1312,8 +1412,8 @@ public class ERXEOControlUtilities {
     }
 
     /**
-     * Calls <code>objectsWithQualifierFormat(ec, entityName, qualifierFormat, args, prefetchKeyPaths, includeNewObjects, false)</code>
-     * <p>
+     * Calls <code>objectsWithQualifierFormat(ec, entityName, qualifierFormat, args, prefetchKeyPaths, includeNewObjects, false)</code>.
+     * 
      * That is, passes false for <code>includeNewObjectsInParentEditingContexts</code>.  This method exists
      * to maintain API compatability.
      */
@@ -1352,7 +1452,7 @@ public class ERXEOControlUtilities {
 
     /**
      * Calls objectsWithQualifier(ec, entityName, qualifier, prefetchKeyPaths, includeNewObjects, false).
-     * <p>
+     *
      * That is, passes false for <code>includeNewObjectsInParentEditingContexts</code>.  This method
      * exists to maintain API compatability.
      */
@@ -1497,7 +1597,7 @@ public class ERXEOControlUtilities {
     	if (isDeep) {
     		EOModelGroup modelGroup = ERXEOAccessUtilities.modelGroup(editingContext);
     		EOEntity rootEntity = modelGroup.entityNamed(entityName);
-    		for (EOEntity subEntity : (NSArray<EOEntity>)rootEntity.subEntities()) {
+    		for (EOEntity subEntity : rootEntity.subEntities()) {
     			entityNames.addObject(subEntity.name());
     		}
     	}
@@ -1643,7 +1743,7 @@ public class ERXEOControlUtilities {
     }
     
     /**
-     * @return the array of objects of the given type that have been inserted into 
+     * Returns the array of objects of the given type that have been inserted into 
      * the editing context and match the given qualifier.  Yes, it's odd that it
      * returns NSMutableArray -- it's an optimization specifically for objectsWithQualifier.
      * Returns an empty array if no objects match.
@@ -1668,7 +1768,7 @@ public class ERXEOControlUtilities {
     }
 
     /**
-     * @return the array of objects of the given type that have been updated in
+     * Returns the array of objects of the given type that have been updated in
      * the editing context and match the given qualifier. Returns an empty array if no objects match.
      * 
      * @param editingContext the editing context to look in
@@ -1691,32 +1791,31 @@ public class ERXEOControlUtilities {
     }
 
     /**
-     * @return the array of objects of the given type that have been deleted from
-     * the editing context and match the given qualifier. Returns an empty array if no objects match.
+     * Return the array of objects of the given type that have been deleted from
+     * the editing context and match the given qualifier.
      * 
      * @param editingContext the editing context to look in
      * @param entityNames the names of the entity to look for
      * @param qualifier the qualifier to restrict by
+     * @return array of objects or an empty array
      */
     public static NSMutableArray deletedObjects(EOEditingContext editingContext, NSArray<String> entityNames, EOQualifier qualifier) {
       NSMutableArray result = new NSMutableArray();
       NSDictionary deletedObjects = ERXArrayUtilities.arrayGroupedByKeyPath(editingContext.deletedObjects(), "entityName");
       for (String entityName : entityNames) {
-	      NSArray deletedObjectsForEntity = (NSArray) deletedObjects.objectForKey(entityName);
-	      if (deletedObjectsForEntity != null && deletedObjectsForEntity.count() > 0) {
-	        NSArray inMemory = EOQualifier.filteredArrayWithQualifier(deletedObjectsForEntity, qualifier);
-	        if (inMemory.count() > 0) {
-		        if (inMemory.count() > 0) {
-		        	result.addObjectsFromArray(inMemory);
-		        }
-	        }
-	      }
+        NSArray deletedObjectsForEntity = (NSArray) deletedObjects.objectForKey(entityName);
+        if (deletedObjectsForEntity != null && deletedObjectsForEntity.count() > 0) {
+          NSArray inMemory = EOQualifier.filteredArrayWithQualifier(deletedObjectsForEntity, qualifier);
+          if (inMemory.count() > 0) {
+            result.addObjectsFromArray(inMemory);
+          }
+        }
       }
       return result;
     }
 
-    /** faults every EO in the qualifiers into the specified editingContext. This is important for 
-     * in memory filtering and eo comparision
+    /** Faults every EO in the qualifiers into the specified editingContext. This is important for 
+     * in memory filtering and eo comparision.
      * @param ec
      * @param q
      */
@@ -1738,7 +1837,7 @@ public class ERXEOControlUtilities {
                 EOQualifier qual = (EOQualifier)oriQualifiers.objectAtIndex(i);
                 qualifiers.addObject(localInstancesInQualifier(ec, qual));
             }
-            return new EOAndQualifier(qualifiers);
+            return q instanceof EOAndQualifier ? new EOAndQualifier(qualifiers) : new EOOrQualifier(qualifiers);
         } else if (q instanceof EONotQualifier) {
             EONotQualifier qNot = (EONotQualifier)q;
             EOQualifier qual = localInstancesInQualifier(ec, qNot.qualifier());
@@ -1748,7 +1847,7 @@ public class ERXEOControlUtilities {
         
     }
 
-    /** returns a NSArray containing EOGlobalIDs from the provided eos.
+    /** Returns a NSArray containing EOGlobalIDs from the provided eos.
      * @param eos the NSArray of EOEnterpriseObjects
      * @return a NSArray of EOGlobalIDs
      */
@@ -1791,7 +1890,7 @@ public class ERXEOControlUtilities {
         return result != null ? result : NSArray.EmptyArray;
     }
 
-    /** returns a NSArray containing EOEnterpriseObjects (actually faults...) for the provided EOGlobalIDs.
+    /** Returns a NSArray containing EOEnterpriseObjects (actually faults...) for the provided EOGlobalIDs.
      * @param ec the EOEditingContext in which the EOEnterpriseObjects should be faulted
      * @param gids the EOGlobalIDs
      * @return a NSArray of EOEnterpriseObjects
@@ -2312,7 +2411,7 @@ public class ERXEOControlUtilities {
 	}
 
 	/**
-	 * Convinience method which passes <code>null</code> for
+	 * Convenience method which passes <code>null</code> for
 	 * <code>entityName</code>.
 	 * 
 	 * @param eo
@@ -2329,7 +2428,7 @@ public class ERXEOControlUtilities {
 	}
 
 	/**
-	 * Convinience method which passes <code>null</code> for
+	 * Convenience method which passes <code>null</code> for
 	 * <code>restrictingQualifier</code> and <code>entityName</code>.
 	 * 
 	 * @param eo
@@ -2343,7 +2442,7 @@ public class ERXEOControlUtilities {
 	}
 	
 	/**
-	 * Convinience method which passes <code>null</code> for
+	 * Convenience method which passes <code>null</code> for
 	 * <code>restrictingQualifier</code>.
 	 * 
 	 * @param eo
@@ -2404,7 +2503,7 @@ public class ERXEOControlUtilities {
 				String entityName = kgid.entityName();
 				Integer count = counts.objectForKey(entityName);
 				if(count == null) {
-					count = new Integer(0);
+					count = Integer.valueOf(0);
 					counts.setObjectForKey(count, entityName);
 				}
 				counts.setObjectForKey(count+1, entityName);
@@ -2450,7 +2549,7 @@ public class ERXEOControlUtilities {
 	 */
 	private static void ensureSortOrdering(EOEditingContext ec, NSArray<? extends EOGlobalID> gids, NSMutableArray<? extends EOEnterpriseObject> objects) {
 		for (int i = 0; i < objects.size(); i++) {
-			EOEnterpriseObject object = (EOEnterpriseObject) objects.objectAtIndex(i);
+			EOEnterpriseObject object = objects.objectAtIndex(i);
 
 			EOGlobalID gid = gids.objectAtIndex(i);
 
@@ -2459,7 +2558,7 @@ public class ERXEOControlUtilities {
 			}
 
 			for (int j = i + 1; j < objects.size(); j++) {
-				if (gid.equals(ec.globalIDForObject((EOEnterpriseObject) objects.objectAtIndex(j)))) {
+				if (gid.equals(ec.globalIDForObject(objects.objectAtIndex(j)))) {
 					ERXArrayUtilities.swapObjectsAtIndexesInArray(objects, i, j);
 
 					break;
@@ -2523,5 +2622,4 @@ public class ERXEOControlUtilities {
 		}
 
 	}
-
 }
